@@ -1,6 +1,7 @@
 package net.b07z.sepia.server.assist.users;
 
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -31,7 +32,7 @@ import spark.Request;
  * @author Florian Quirin
  *
  */
-public class AuthenticationDynamoDB implements AuthenticationInterface{
+public class AuthenticationDynamoDB implements AuthenticationInterface {
 	
 	private static final String tableName = DB.USERS;					//table of the users
 	private static final String ticketsTable = DB.TICKETS;				//table of tickets (used here to temporary store reg. tokens)
@@ -58,7 +59,7 @@ public class AuthenticationDynamoDB implements AuthenticationInterface{
 	private HashMap<String, Object> basicInfo;
 	
 	@Override
-	public void setRequestInfo(Object request) {
+	public void setRequestInfo(Object request){
 		this.metaInfo = (Request) request;	
 	}
 		
@@ -200,7 +201,7 @@ public class AuthenticationDynamoDB implements AuthenticationInterface{
 			ticketId = GUID.getTicketGUID();
 			String storeToken = Security.hashClientPassword(email + token + time + ticketId);
 			String[] keys = new String[]{TOKENS_REG, TOKENS_REG_TS};
-			Object[] objects = new Object[]{storeToken, new Long(time)};
+			Object[] objects = new Object[]{storeToken, time};
 			if (!write_reg_token(ticketId, keys, objects)){
 				throw new RuntimeException("registration token storing failed!");
 			}
@@ -286,7 +287,7 @@ public class AuthenticationDynamoDB implements AuthenticationInterface{
 			}
 			
 			//delete old token or make it invalid
-			write_reg_token(ticketId, new String[]{TOKENS_REG_TS}, new Object[]{new Long(0)});
+			write_reg_token(ticketId, new String[]{TOKENS_REG_TS}, new Object[]{Long.valueOf(0)});
 			
 			//get a new ID and create a save storage for the password by standard PBKDF2 HMAC-SHA-256 algorithm
 			String[] ids = {email, "-"};   	//additionally known ids due to type of login. Order fixed: email, phone, xy, ...
@@ -390,6 +391,12 @@ public class AuthenticationDynamoDB implements AuthenticationInterface{
 		return success;
 	}
 	
+	//get an array of users
+	public JSONArray listUsers(Collection<String> keys, int from, int size){
+		//TODO: implement
+		throw new RuntimeException("The method 'listUsers' of class '" + AuthenticationDynamoDB.class.getSimpleName() + "' is NOT YET IMPLEMENTED!");
+	}
+	
 	//request change of password
 	public JSONObject requestPasswordChange(JSONObject info){
 		//get parameters
@@ -425,7 +432,7 @@ public class AuthenticationDynamoDB implements AuthenticationInterface{
 			ticketId = GUID.getTicketGUID();
 			String storeToken = Security.hashClientPassword(userid + token + time + ticketId);
 			String[] keys = new String[]{TOKENS_SUPP, TOKENS_SUPP_TS};
-			Object[] objects = new Object[]{storeToken, new Long(time)};
+			Object[] objects = new Object[]{storeToken, time};
 			if (!write_reg_token(ticketId, keys, objects)){
 				throw new RuntimeException("requestPasswordChange token storing failed!");
 			}
@@ -538,7 +545,7 @@ public class AuthenticationDynamoDB implements AuthenticationInterface{
 		}
 		
 		//delete old token or make it invalid
-		write_reg_token(ticketId, new String[]{TOKENS_SUPP_TS}, new Object[]{new Long(0)});
+		write_reg_token(ticketId, new String[]{TOKENS_SUPP_TS}, new Object[]{Long.valueOf(0)});
 		
 		//-------------------------------------------------------------------------------------------
 		
@@ -901,7 +908,7 @@ public class AuthenticationDynamoDB implements AuthenticationInterface{
 		long now = System.currentTimeMillis();
 		String tokenPath_ts = tokenPath + "_ts";
 		String[] keys = new String[]{tokenPath, tokenPath_ts};
-		Object[] objects = new Object[]{token, new Long(now)};
+		Object[] objects = new Object[]{token, now};
 		
 		return write_protected(userid, idType, keys, objects);
 	}
